Iteration #3: Metallurgy & Rubber Foundation
- Created individual classes for Copper Ore, Tin Ore, Ingots, and Plates.
- Configured world generation (Copper Y:40-75, Tin Y:20-55).
- Added smelting recipes for ores and shapeless crafting recipes for plates.
- Registered all new content in the Ore Dictionary for cross-mod compatibility.
- Added base blocks for Rubber Tree: Log, Leaves, and Sapling.
- Set harvest levels (Iron pickaxe required) and fixed Creative Tab visibility.
- Added localization support for en_US and ru_RU.

--- a/src/main/resources/assets/industrialmod/lang/ru_RU.lang
+++ b/src/main/resources/assets/industrialmod/lang/ru_RU.lang
@@ -4,3 +4,12 @@ tile.industrialBlock.name=Индустриальный блок
 tile.industrialOre.name=Индустриальная руда
 item.industrialHammer.name=Индустриальный молот
 item.industrialPlate.name=Индустриальная пластина
+item.ingotCopper.name=Медный слиток
+item.ingotTin.name=Оловянный слиток
+item.plateCopper.name=Медная пластина
+item.plateTin.name=Оловянная пластина
+tile.oreCopper.name=Медная руда
+tile.oreTin.name=Оловянная руда
+tile.rubberLog.name=Каучуковое дерево
+tile.rubberLeaves.name=Листва каучука
+tile.rubberSapling.name=Саженец каучука
