--- a/src/main/resources/assets/industrialmod/lang/en_US.lang
+++ b/src/main/resources/assets/industrialmod/lang/en_US.lang
@@ -4,3 +4,12 @@ tile.industrialBlock.name=Industrial Block
 tile.industrialOre.name=Industrial Ore
 item.industrialHammer.name=Industrial Hammer
 item.industrialPlate.name=Industrial Plate
+item.ingotCopper.name=Copper Ingot
+item.ingotTin.name=Tin Ingot
+item.plateCopper.name=Copper Plate
+item.plateTin.name=Tin Plate
+tile.oreCopper.name=Copper Ore
+tile.oreTin.name=Tin Ore
+tile.rubberLog.name=Rubber Wood
+tile.rubberLeaves.name=Rubber Leaves
+tile.rubberSapling.name=Rubber Sapling
