Iteration #4: Implementation of Rubber Tree ecosystem and Tree Tap tool
## Overview
This PR completes the functional ecosystem for the Rubber Tree (Hevea) and introduces the basic harvesting tool.

### Changes:

#### 1. Blocks & Vegetation
*   **BlockRubberLeaves**:
    *   Fixed transparency rendering issues (incorrect light opacity/render type).
    *   Implemented proper side rendering to prevent "world holes."
    *   Added 5% chance to drop `rubberSapling`.
*   **BlockRubberSapling**:
    *   Implemented `IGrowable` interface for bone meal support.
    *   Linked to `WorldGenRubberTree` for manual tree growth.
    *   Fixed biome color filtering (getRenderColor/colorMultiplier) to ensure bright textures.
    *   Fixed unique icon rendering (previously defaulted to Oak icon).

#### 2. Items & Crafting
*   **ItemTreeTap**:
    *   Created custom item class with 64 max damage (durability).
    *   Added a shapeless crafting recipe (5 sticks).
*   **IndustrialMod Core**:
    *   Refactored initialization to follow the PreInit/Init standard.
    *   Moved object instantiation to `preInit` to resolve NullPointer issues with recipes.
    *   Organized OreDictionary and Recipes inside the `init` phase.

### Technical Details:
*   Fixed texture paths and icon registration for Minecraft 1.7.10.
*   Cleaned up imports and resolved class inheritance conflicts.

--- a/src/main/resources/assets/industrialmod/lang/ru_RU.lang
+++ b/src/main/resources/assets/industrialmod/lang/ru_RU.lang
@@ -11,5 +11,6 @@ item.plateTin.name=Оловянная пластина
 tile.oreCopper.name=Медная руда
 tile.oreTin.name=Оловянная руда
 tile.rubberLog.name=Каучуковое дерево
+item.treeTap.name=Краник
 tile.rubberLeaves.name=Листва каучука
 tile.rubberSapling.name=Саженец каучука
