--- a/src/main/resources/assets/industrialmod/lang/en_US.lang
+++ b/src/main/resources/assets/industrialmod/lang/en_US.lang
@@ -10,6 +10,7 @@ item.plateCopper.name=Copper Plate
 item.plateTin.name=Tin Plate
 tile.oreCopper.name=Copper Ore
 tile.oreTin.name=Tin Ore
-tile.rubberLog.name=Rubber Wood
-tile.rubberLeaves.name=Rubber Leaves
-tile.rubberSapling.name=Rubber Sapling
+item.treeTap.name=Treetap
+tile.rubberLog.name=Rubber Tree Log
+tile.rubberLeaves.name=Rubber Tree Leaves
+tile.rubberSapling.name=Rubber Tree Sapling
