Iteration #6: Unique rubber tree and localization
At this stage, the unique rubber harvesting mechanic was fully implemented and multilingual support was added.

--- a/src/main/resources/assets/industrialmod/lang/en_US.lang
+++ b/src/main/resources/assets/industrialmod/lang/en_US.lang
@@ -14,3 +14,5 @@ item.treeTap.name=Treetap
 tile.rubberLog.name=Rubber Tree Log
 tile.rubberLeaves.name=Rubber Tree Leaves
 tile.rubberSapling.name=Rubber Tree Sapling
+item.latex.name=Сaoutchouc
+item.rubber.name=Rubber
