--- a/src/main/resources/assets/industrialmod/lang/ru_RU.lang
+++ b/src/main/resources/assets/industrialmod/lang/ru_RU.lang
@@ -14,3 +14,5 @@ tile.rubberLog.name=Каучуковое дерево
 item.treeTap.name=Краник
 tile.rubberLeaves.name=Листва каучука
 tile.rubberSapling.name=Саженец каучука
+item.latex.name=Каучук
+item.rubber.name=Резина
