Changes: The logic of the coal generator with the user interface has been fully implemented.
- Implemented TileEntity logic for the coal generator (1.7.10).
- Energy balance: 1 coal = 16,000 RF (generation 10 RF/tick).
- Created a unique interface:
  * Animated triangular fuel combustion process indicator.
  * Vertical segmented scale of accumulated energy.
- Fixed data synchronization (NBT/Packets) between the server and GUI.
- Added dynamic block state change (Active/Inactive) during operation.

--- a/src/main/resources/assets/industrialmod/lang/en_US.lang
+++ b/src/main/resources/assets/industrialmod/lang/en_US.lang
@@ -16,3 +16,4 @@ tile.rubberLeaves.name=Rubber Tree Leaves
 tile.rubberSapling.name=Rubber Tree Sapling
 item.latex.name=Сaoutchouc
 item.rubber.name=Rubber
+tile.coalGenerator.name=Coal Generator
