--- a/src/main/resources/assets/industrialmod/lang/ru_RU.lang
+++ b/src/main/resources/assets/industrialmod/lang/ru_RU.lang
@@ -16,3 +16,4 @@ tile.rubberLeaves.name=Листва каучука
 tile.rubberSapling.name=Саженец каучука
 item.latex.name=Каучук
 item.rubber.name=Резина
+itemGroup.industrialmod=Угольный генератор
